--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,10 @@ a:hover {
   color: #e53935;
 }
 
+.btn {
+  margin:0;
+}
+
 .btn-backred:hover {
   color: #000;
 }
@@ -71,15 +75,12 @@ a:hover {
 
 /* --- Navbar Cost --- */
 .tags-nav {
-  padding-top: 75px;
+  padding-top: 55px;
 }
 
-.cost-wrapper {
-  background-color: #e53935;
-}
 
 .cost-container {
-  padding: 20px 0;
+  padding: 15px 0;
 }
 
 .cost-item {
@@ -92,7 +93,6 @@ a:hover {
   font-size: 25px;
   color: #fff;
 }
-
 
 .cost-link:first-child {
   margin-left: 0;
@@ -125,6 +125,16 @@ a:hover {
   color: #fff;
   padding-left: 15px;
 
+}
+
+.md-form {
+  margin-top: 0;
+  margin-bottom:0;
+  margin-left: 30px;
+}
+
+.red.lighten-3 {
+  background-color: #e53935 !important;
 }
 
 .btn-search:focus {
