--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ a:hover {
 
 
 .cost-container {
-  padding: 15px 0;
+  padding-top: 20px;
 }
 
 .cost-item {
@@ -235,46 +235,58 @@ a:hover {
   background-color: #212121;
   border: 2px solid #e53935;
   margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+}
+
+.card-right {
+ margin-left: 20px;
+ width: 100%;
 }
 
 .card-body {
   display: flex;
   flex-direction: row;
-  padding: 20px;
+  padding: 0;
+  margin-top: 25px;
 }
 
 .card-user {
   font-weight: bold;
   color: #fff;
+  margin-top: 12px;c
 }
 
 .card-created {
-  margin-top: 5px;
   margin-bottom: 0;
   font-size: .9rem;
   font-weight: 400;
   color: #fff;
+  margin-left: auto;
 }
 
-.tag-body {
-  padding-top: 0;
-  padding-bottom: 0;
+.card-edit-btn {
+  color: grey;
+}
+.tag-text {
+  margin-top: 12px
 }
 
 .tag-hashtag {
   color: #fff;
-  padding: 5px;
+  padding: 3px;
   background-color: #e53935;
-  margin-left: 10px;
+  border-radius: 5px;
+  font-size: 14px;
 }
 
-.text-body {
-  padding-left: 20px;
+.card-title-btn {
+  display: flex;
+  flex-direction: row;
 }
-
 .card-title {
   margin-bottom: 0;
-  text-align: center;
   color: #fff;
   font-weight: bold;
 }
@@ -288,11 +300,15 @@ a:hover {
   color: #fff;
   border: none;
   background-color: #212121;
-  font-size: 20px;
+  font-size: 15px;
 }
 
-.btn-like-comment:last-child {
-  margin-left: 30px;
+.btn-like-comment {
+  margin-left: 20px;
+}
+
+.btn-like-comment:first-child {
+  margin-left: 0;
 }
 
 .fa-comment-dots, .fa-star {
