--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,9 @@ a {
 a:hover {
   color: #e53935;
 }
-
+h5 {
+  font-size: 15px;
+}
 .btn {
   margin:0;
 }
@@ -79,13 +81,17 @@ a:hover {
 }
 
 
-.cost-container {
-  padding-top: 20px;
+.cost-wrapper {
+  margin-top: 30px;
+}
+
+.cost-category {
+  display: flex;
+  justify-content: center;
 }
 
 .cost-item {
-  display: flex;
-  justify-content: center;
+  width: 200px;
 }
 
 .cost-link {
@@ -228,17 +234,33 @@ a:hover {
 
 /* --- posts. card --- */
 .card-wrapper {
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 .card {
   background-color: #212121;
   border: 2px solid #e53935;
+  padding: 15px;
+}
+
+.card-main {
   margin-top: 20px;
   display: flex;
   flex-direction: row;
-  padding: 15px;
 }
+
+.card-main:first-child {
+  margin-top: 0;
+}
+
+.card-details {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+.card-details:first-child {
+  margin-top: 0;
+} 
 
 .card-right {
  margin-left: 20px;
@@ -247,15 +269,13 @@ a:hover {
 
 .card-body {
   display: flex;
-  flex-direction: row;
   padding: 0;
-  margin-top: 25px;
 }
 
 .card-user {
   font-weight: bold;
   color: #fff;
-  margin-top: 12px;c
+  margin-top: 12px;
 }
 
 .card-created {
@@ -289,6 +309,7 @@ a:hover {
   margin-bottom: 0;
   color: #fff;
   font-weight: bold;
+  text-align: center;
 }
 
 .like-btn {
@@ -320,6 +341,7 @@ a:hover {
 /* --- posts.create--- */
 .card-create {
   padding: 20px;
+  margin-top: 20px;
 }
 
 /*  --- posts.form--- */
@@ -357,8 +379,6 @@ textarea {
 .comment-text {
   display: flex;
   border-top: 1px solid #fff;
-  margin-top: 30px;
-  padding-top: 5px;
 }
 
 .comment-user {
@@ -403,4 +423,11 @@ textarea {
 
 .login-btn {
   text-align: center;
+}
+
+.pagination .page-item .page-link {
+  color: #fff;
+}
+.pagination .page-item .page-link:hover {
+  background-color: #263238;
 }
