--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,11 @@
 body {
   font-family: "Lato";
   padding: 0;
-  background-image: url(../img/exvs-sns-image/bg_blue.jpg);
+  background-image: url(../img/exvs-sns-image/bg_black.jpg);
   width: 100%;
   height: 100%;
   background-size: cover;
+  color: #fff;
 }
 
 .container {
@@ -35,13 +36,13 @@ h5 {
 }
 
 .btn:hover {
-  color: #fff;
+  color: rgba(255,255,255,.75);
 }
 
 .card-text-p {
-  color: #fff;
   font-size: 15px;
 }
+
 /* --- Nabar Head--- */
 .navbar{
   background-color: #212121;
@@ -84,14 +85,6 @@ h5 {
   opacity: 0.7;
 }
 
-.fa-gamepad{
-  padding-right: 10px;
-}
-
-.dropdown-toggle {
-  color: #fff;
-}
-
 .user-circle{
   font-size: 30px;
 }
@@ -100,7 +93,6 @@ h5 {
 .tags-nav {
   padding-top: 55px;
 }
-
 
 .cost-wrapper {
   margin-top: 30px;
@@ -130,46 +122,50 @@ h5 {
 }
 
 /* --- HOME --- */
-.home {
-  padding-top: 75px;
+.top-wrapper {
+  position: relative;
+  overflow-x: hidden;
 }
 
-.top-wrapper {
-  text-align: center;
+.top-background-img {
+  width: 100%;
+  height: 650px;
   background-size: cover;
 }
 
+.top-container {
+  position: absolute;
+  left: 45%;
+  top: 12%;
+  transform: translateX(-50%);
+}
+
+.top-titlebox {
+  display: flex;
+  align-items: center;
+  width: 500px;
+  height: 300px;
+  background-color: rgba(255,255,255,0.5);
+}
+
 .top-title {
-  color:#DD2C00;
-  font-weight: 700;
+  margin: 0 auto;
   letter-spacing: 3px;
   text-transform: uppercase;
-}
-
-.top-container {
-  padding: 250px 0;
-}
-
-.top-title {
-  font-size: 90px;
+  text-align: center;
+  font-weight: normal;
+  color: #212121;
 }
 
 .btn-about {
   background-color: #fff;
-  border-radius: 5px;
-  font-size: 20px;
 }
 
 .btn-about:hover {
   background-color: #c0c0c0;
-  color: #fff;
 }
 
 /* --- My Profile --- */
-.about-wrapper {
-  background-color:#f2f2f2;
-}
-
 .about-container {
   padding: 60px 0 70px 0;
 }
@@ -255,7 +251,6 @@ h5 {
 
 .card-user {
   font-weight: bold;
-  color: #fff;
   margin-top: 12px;
 }
 
@@ -263,7 +258,7 @@ h5 {
   margin-bottom: 0;
   font-size: .9rem;
   font-weight: 400;
-  color: #fff;
+  color:#fff;
   margin-left: auto;
 }
 
@@ -275,7 +270,6 @@ h5 {
 }
 
 .tag-hashtag {
-  color: #fff;
   padding: 3px;
   background-color:#DD2C00;
   border-radius: 5px;
@@ -286,20 +280,15 @@ h5 {
   display: flex;
   flex-direction: row;
 }
+
 .card-title {
   margin-bottom: 0;
-  color: #fff;
   font-weight: bold;
   text-align: center;
 }
 
-.like-btn {
-  color: #fff;
-}
-
 .btn-like-comment {
   padding: 0;
-  color: #fff;
   border: none;
   background-color: #212121;
   font-size: 15px;
@@ -327,7 +316,7 @@ h5 {
 
 /*  --- posts.form--- */
 .btn-back {
-  background-color: #fff;
+  background-color:#fff;
   color: #212121;
 }
 
@@ -337,7 +326,7 @@ h5 {
 
 .btn-submit {
   background-color:#DD2C00;
-  color: #fff;
+  
 }
 
 .btn-submit:hover {
@@ -392,7 +381,7 @@ textarea {
 
 .tag-count {
   text-align: center;
-  color: #fff;
+  
 }
 
 /* --- login form --- */
@@ -409,6 +398,7 @@ textarea {
 .pagination .page-item .page-link {
   color: #fff;
 }
+
 .pagination .page-item .page-link:hover {
   background-color: #212121;
 }
