--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ a {
 
 p {
   margin-bottom: 0;
+  font-size: 12px;
 }
 
 .btn {
@@ -273,7 +274,6 @@ textarea {
 
 .card-user {
   display: flex;
-  margin-left: auto;
   font-size: 12px;
 }
 
@@ -284,7 +284,7 @@ textarea {
   border-radius: 20%;
 }
 
-.circle-icon {
+.user-icon {
   font-size: 20px;
 }
 
@@ -422,6 +422,10 @@ textarea {
   object-fit: cover;
 }
 
+.mypage-editThumbnail {
+  font-size: 150px;
+}
+
 .card-mypage {
   display: flex;
   flex-direction: row;
@@ -461,4 +465,8 @@ textarea {
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
   background-color: #464c56;
   color: #fff;
+}
+
+.pagination .page-item .page-link {
+  border: 1px solid #ddd;
 }
