--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,6 +274,7 @@ textarea {
   flex-direction: row;
   margin-top: 20px;
 }
+
 .card-details:first-child {
   margin-top: 0;
 }
@@ -361,12 +362,13 @@ textarea {
   margin-right: 10px;
 }
 
+.detailes-title {
+  font-size: 24px;
+}
 
-
-/* --- posts.create--- */
-.card-create {
-  padding: 20px;
-  margin-top: 20px;
+.card-text {
+  white-space: pre-line;
+  font-size: 16px;
 }
 
 /*  --- posts.form--- */
