--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ a {
 
 p {
   margin-bottom: 0;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .btn {
@@ -167,37 +167,73 @@ textarea {
 
 /* --- HOME --- */
 .top-wrapper {
+  width: 100%;
+  height: 650px;
   position: relative;
-  overflow-x: hidden;
 }
-
 .top-background-img {
+  overflow-x: hidden;
   width: 100%;
   height: 650px;
   background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.top-wrapper::before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;;
+  background-color: rgba(0,0,0,.5);
+  content: "";
 }
 
 .top-container {
   position: absolute;
-  left: 45%;
-  top: 12%;
+  display: flex;
+  left: 55%;
+  top: 26%;
   transform: translateX(-50%);
+  padding: 0;
 }
 
-.top-titlebox {
-  display: flex;
-  align-items: center;
-  width: 500px;
-  height: 300px;
-  background-color: rgba(255,255,255,0.5);
+.top-messageBox {
+  color: #fff;
 }
 
 .top-title {
-  margin: 0 auto;
-  letter-spacing: 3px;
-  text-align: center;
+  letter-spacing: 5px;
   font-weight: normal;
+  font-size: 75px;
 }
+
+.top-titleMessage {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.top-messageBorder {
+  margin-top: 20px;
+  border: 1px solid #fff;
+}
+
+.top-messageText {
+  margin-top: 20px;
+}
+
+.top-login {
+  margin-left: 180px;
+  color: #fff;
+}
+
+.messageText-login {
+  color: #fff;
+  border-bottom: 1px solid #fff;
+}
+
 
 .btn-about:hover {
   background-color: #c0c0c0;
@@ -231,6 +267,10 @@ textarea {
   font-weight: bold;
 }
 
+.social-list {
+  text-align: center;
+}
+
 .social-item {
   height: 42px;
   width: 42px;
@@ -240,10 +280,6 @@ textarea {
   line-height: 40px;
   transition: all 0.5s;
   text-align: center;
-}
-
-.social-item:last-child {
-  margin-left: 15px;
 }
 
 /* --- posts. card --- */
