--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,13 +260,44 @@ textarea {
 }
 
 .about-content {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .about-text {
   font-weight: bold;
   text-align: center;
 }
+
+.tutorials {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.tutorial {
+  border: 1px solid #464c56;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.tutorial-wrapper {
+  background-color: #d5e9f7;
+}
+.tutorial:first-child {
+  margin-top: 40px;
+}
+
+.tutorial-iconBorder {
+  border-right: 1px solid #464c56;
+}
+
+.tutorial-icon {
+  width: 100px;
+  padding-right: 10px;
+  text-align: center;
+}
+
 
 /* --- posts. card --- */
 .card-wrapper {
