[change] 詳細一覧カード横幅変更

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -410,6 +410,9 @@ textarea {
 }
 
 /* 詳細画面 */
+.show-container {
+  width: 900px;
+}
 .card-details {
   position: relative;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
