[change] 詳細一覧コメント横幅変更

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -495,7 +495,7 @@ textarea {
 /* --- posts.comment ---*/
 .card-comment {
   float: right;
-  width: 75%;
+  width: 600px;
   position: relative;
   margin-top: 20px;
 }
