--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,12 +19,22 @@ p {
   font-size: 14px;
 }
 
+img {
+  vertical-align: top;
+}
+
 .btn {
   margin:0;
 }
 
 textarea {
   resize: none;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .empty-text {
@@ -297,6 +307,35 @@ textarea {
   text-align: center;
 }
 
+.footer {
+  padding: 20px 0;
+  background-color: #464c56;
+}
+
+.footer-container {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.footer-title {
+  font-size: 18px;
+}
+
+.mySocial-link {
+  color: #fff;
+  font-size: 12px;
+}
+
+.mySocial-link:hover {
+  color: #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.copy-right {
+  font-size: 12px;
+}
 
 /* --- posts. card --- */
 .card-wrapper {
