--- a/public/css/style.css
+++ b/public/css/style.css
@@ -595,12 +595,12 @@ textarea {
 }
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link:focus {
-  background-color: #464c56;
+  background-color: #0288D1;
   color: #fff;
 }
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-  background-color: #464c56;
+  background-color: #0288D1;
   color: #fff;
 }
 
